WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225023
[GPUP] REGRESSION: Selecting play/pause on Spotify.com causes page to reload
https://bugs.webkit.org/show_bug.cgi?id=225023
Summary
[GPUP] REGRESSION: Selecting play/pause on Spotify.com causes page to reload
Jer Noble
Reported
2021-04-24 14:57:00 PDT
[GPUP] REGRESSION: Selecting play/pause on Spotify.com causes page to reload
Attachments
Patch
(6.04 KB, patch)
2021-04-24 15:01 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-04-24 14:57:18 PDT
<
rdar://76985997
>
Jer Noble
Comment 2
2021-04-24 15:01:08 PDT
Created
attachment 426991
[details]
Patch
EWS
Comment 3
2021-04-25 13:38:31 PDT
Committed
r276571
(
237007@main
): <
https://commits.webkit.org/237007@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426991
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug